--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Card Game</title>
+  <title>Joshua's Card Game</title>
   <link rel="stylesheet" type="text/css" href="css/playingCards.ui.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -33,5 +33,5 @@
 
   </div>
 </body>
-</html> <title>Card Game</title>
+</html>
 
