--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="button" id="draw" value="draw a card" />
       <input type="button" id="addCard" value="add drawn card back" />
       <br><br>
-      <div id="yourHand"></div>
+      <div id="computerHand"></div>
     </div>
 
     <div>
