--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="error"></div>
 
     <div>
-      <h2>Your Hand</h2>
+      <h2>YourHand</h2>
       <input type="button" id="draw" value="draw a card" />
       <input type="button" id="addCard" value="add drawn card back" />
       <br><br>
-      <div id="computerHand"></div>
+      <div id="YourHand"></div>
     </div>
 
     <div>
