Fixed id name for draw button

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <div id="error"></div>
 
     <div>
-      <h2>YourHand</h2>
+      <h2>Your Hand</h2>
       <input type="button" id="draw" value="draw a card" />
       <input type="button" id="addCard" value="add drawn card back" />
       <br><br>
-      <div id="Your Hand"></div>
+      <div id="yourHand"></div>
     </div>
-    
+
+
     <div>
       <h2><br>Card Deck</h2>
       <input type="button" id="shuffler" value="shuffle" />
