updated computer hand and your hand

--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
 
     <div>
       <h2>Your Hand</h2>
-      <input type="button" id="draw" value="draw a card" />
-      <input type="button" id="addCard" value="add drawn card back" />
+      <input type="button" id="draw1" value="draw a card" />
+      <input type="button" id="addCard1" value="add drawn card back" />
       <br><br>
       <div id="yourHand"></div>
     </div>
 
+    <div>
+      <h2>Computer Hand</h2>
+      <input type="button" id="draw2" value="draw a card" />
+      <input type="button" id="addCard2" value="add drawn card back" />
+      <br><br>
+      <div id="computerHand"></div>
+    </div>
 
     <div>
       <h2><br>Card Deck</h2>
       <input type="button" id="shuffler" value="shuffle" />
+      <input type= "button" id="dealer"  value="deal" />
       <input type="button" id="orderByRank" value="order by rank" />
       <input type="button" id="orderBySuit" value="order by suit" />
       <br><br>
