--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       <div id="computerHand"></div>
     </div>
 
+    </div> 
+    <h2><br>Discard Pile</h2>
+    <input type ="button" id ="discarder" value="discard a card" />
+    <br><br>
+    </div>
+    
+    
     <div>
       <h2><br>Card Deck</h2>
       <input type="button" id="shuffler" value="shuffle" />
