--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h2><br>Discard Pile</h2>
     <input type ="button" id ="discarder" value="discard a card" />
     <br><br>
+    <div id="discardPile"></div>
     </div>
     
     
