--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     </div> 
-      <h2><br>Discard Pile</h2>
+      <h2>Discard Pile</h2>
       <input type ="button" id ="discarder" value="discard a card" />
       <br><br>
       <div id="discardPile"></div>
