--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </div> 
       <h2>Discard Pile</h2>
-      <input type ="button" id ="discarder" value="discard a card" />
+      <input type ="button" id ="discard" value="discard a card" />
       <br><br>
       <div id="discardPile"></div>
     </div>
