--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
       <h2>Your Hand</h2>
       <input type="button" id="draw1" value="draw a card" />
-      <input type="button" id="discard" value="discard card" />
+      <input type="button" id="discard1" value="discard card" />
       <br><br>
       <div id="yourHand"></div>
     </div>
@@ -20,7 +20,7 @@
     <div>
       <h2>Computer Hand</h2>
       <input type="button" id="draw2" value="draw a card" />
-      <input type="button" id="discard" value="discard card" />
+      <input type="button" id="discard2" value="discard card" />
       <br><br>
       <div id="computerHand"></div>
     </div>
